create components with types and styles, homepage, useForm hook and populate with mock data

--- a/src/ui/styles/abstracts/_colors.scss
+++ b/src/ui/styles/abstracts/_colors.scss
@@ -6,7 +6,11 @@ $color-secondary: var(--color-secondary);
 $gray-extralight: var(--gray-extralight);
 $gray-light: var(--gray-light);
 $gray-medium: var(--gray-medium);
+$gray-dark: var(--gray-dark);
 
 // Semantic colors 
 $color-success: var(--color-success);
 $color-error: var(--color-error);
+
+// Background colors
+$color-backdrop: var(--color-backdrop);
