--- a/src/ui/styles/abstracts/_typography.scss
+++ b/src/ui/styles/abstracts/_typography.scss
@@ -3,7 +3,7 @@ $font-base: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
 $font-h1: var(--font-h1);
 $font-h2: var(--font-h2);
 $font-h3: var(--font-h3);
-$font-body-md: var(--font-body-md);
+$font-body-sm: var(--font-body-sm);
 $font-body-lg: var(--font-body-lg);
 
 // Font weight
