--- a/src/ui/styles/base/_reset.scss
+++ b/src/ui/styles/base/_reset.scss
@@ -1,4 +1,3 @@
-
 *,
 *::before,
 *::after {
@@ -8,7 +7,7 @@
 *,
 *:before,
 *:after {
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
 
 * {
@@ -39,15 +38,32 @@ ul {
 }
 
 img {
-    width: 100%; 
+    width: 100%;
 }
 
 button {
     font-family: inherit;
     text-decoration: none;
     border: none;
+    background-color: transparent;
     cursor: pointer;
 }
 
+input,
+textarea,
+select {
+    font-family: inherit;
+    color: inherit;
+    appearance: none;
+}
 
+input:active,
+textarea:active,
+select:active,
+input:focus,
+textarea:focus,
+select:focus {
+    outline: none; 
+    box-shadow: 0 0 0 1px #14141482; // Custom outline, works for any shape
+}
 
